fix bugs on mobile phone

--- a/src/app/information/information.module.scss
+++ b/src/app/information/information.module.scss
@@ -3,7 +3,7 @@
     background: linear-gradient(110deg, rgb(2, 3, 5) 2%, rgb(7, 10, 15));
 
     @media screen and (max-width: 600px) {
-        padding: 2.5rem 1.5rem;
+        padding: 8rem 1.5rem;
     }
 }
 
